   HBASE-2022  NPE in housekeeping kills RS
   HBASE-2033  Shell scan 'limit' is off by one
   HBASE-2034  [Bulk load tools] loadtable.rb calls an undefined method
               `descendingIterator' (Ching-Shen Chen via Stack)
   HBASE-2043  Shell's scan broken
   HBASE-2047  Example command in the "Getting Started" 
               documentation doesn't work (Benoit Sigoure via JD)

  IMPROVEMENTS
   HBASE-1961  HBase EC2 scripts
   HBASE-1970  Export does one version only; make it configurable how many
               it does
   HBASE-1975  SingleColumnValueFilter: Add ability to match the value of
               previous versions of the specified column
               (Jeremiah Jacquet via Stack)
   HBASE-1987  The Put object has no simple read methods for checking what
               has already been added (Ryan Smith via Stack)
   HBASE-2009  [EC2] Support mapreduce
   HBASE-2012  [EC2] LZO support
   HBASE-2011  Add zktop like output to HBase's master UI (Lars George via
               Andrew Purtell)
   HBASE-2018  Updates to .META. blocked under high MemStore load
   HBASE-2029  Reduce shell exception dump on console
               (Lars George and J-D via Stack)
   HBASE-2027  HConnectionManager.HBASE_INSTANCES leaks TableServers
               (Dave Latham via Stack)
   HBASE-2031  When starting HQuorumPeer, try to match on more than 1 address

Release 0.20.2 - November 18th, 2009
  INCOMPATIBLE CHANGES

  BUG FIXES
   HBASE-1905  Remove unused config. hbase.hstore.blockCache.blockSize
   HBASE-1906  FilterList of prefix and columnvalue not working properly
               with deletes and multiple values
   HBASE-1896  WhileMatchFilter.reset should call encapsulated filter reset
   HBASE-1912  When adding a secondary index to an existing table, it will
               cause NPE during re-indexing (Mingjui Ray Liao via Andrew
               Purtell)
   HBASE-1917  TestScanner.testFilters failing