@@ -18,6 +18,8 @@ Release 0.20.3 - Unreleased
    HBASE-2043  Shell's scan broken
    HBASE-2047  Example command in the "Getting Started" 
                documentation doesn't work (Benoit Sigoure via JD)
+   HBASE-2048  Small inconsistency in the "Example API Usage"
+               (Benoit Sigoure via JD)
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
